openvpn-data/my-iptables-next.rules
# Generated by iptables-save v1.8.4 on Tue Apr  9 08:31:09 2024
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -d 192.168.255.1/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -d 192.168.255.1/32 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -d 192.168.255.1/32 -p tcp -m tcp --dport 8082 -j ACCEPT
COMMIT
# Completed on Tue Apr  9 08:31:09 2024
# Generated by iptables-save v1.8.4 on Tue Apr  9 08:31:09 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A PREROUTING -d 192.168.255.1/32 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 192.168.192.3:8080
-A PREROUTING -d 192.168.255.1/32 -p tcp -m tcp --dport 8081 -j DNAT --to-destination 192.168.192.3:8081
-A PREROUTING -d 192.168.255.1/32 -p tcp -m tcp --dport 8082 -j DNAT --to-destination 192.168.192.3:80
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -s 192.168.255.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.254.0/24 -o eth0 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:41071
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:52825
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 41071 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 52825 -j SNAT --to-source :53
COMMIT
# Completed on Tue Apr  9 08:31:10 2024
